update project.html with a Hello message

--- a/project.html
+++ b/project.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p> Hi this my project</p>
+    <h1>Hello , GitHub world</h1>
+    <p> This my first project</p>
 </body>
 </html>
