A new chang in project.html

--- a/project.html
+++ b/project.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Hello , GitHub world</h1>
     <p> This my first project</p>
+    <p> This project is belong mobile app</p>
 </body>
 </html>
